sre/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: ederbrito
spec:
  parentRefs:
    - name: ederbrito-gateway
      namespace: kube-system
      sectionName: https-apex
  hostnames:
    - ederbrito.com.br
  rules:
    - backendRefs:
        - name: frontend
          port: 3000
